# rust-servic

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  other.md  path  test.db  test.sql
src/: main.rs
src/api/: client.rs  client_api.rs  file.rs  mod.rs  user.rs
src/db/: client.rs  mod.rs  models.rs  user.rs
src/tools/: file.rs  jwt.rs  mod.rs  pwd.rs  rand_str.rs  res.rs  ustr.rs
