[package]
name = "servic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket web框架
rocket = { version = "0.5.0", features = ["json"] }
# 错误集中处理
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
uuid = "1.8.0"


# 序列化与反序列化
serde = { version = "1.0", features = ["derive"] }
# 本地sqilt数据库必须要，否则会出现sqlite3.dll无法链接
rusqlite = { version = "0.29.0", features = ["bundled"] }

# 数据库连接池
[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool", "sqlite_pool"]
